# snoopy

./: ._Makefile  Doxyfile  Makefile  Makefile.in  aclocal.m4  configure  configure.ac  makefile  rules.mk
cfg/bench/: gvars.h  snoopy.cfg
cfg/default/: snoopy.cfg
cfg/mri/: snoopy.cfg
matlab/: timevol.m
src/: ._common.c  ._common.h  ._gvars.h  ._initflow.c  ._mainloop.c  ._output.c  ._timestep.c  Cflow.c  Makefile  boundary.c  common.c  common.h  debug.c  debug.h  documentation.h  error.c  error.h  forcing.c  gfft.c  gfft.h  gvars.h  initflow.c  initflow.h  interface.c  interface.h  ltide.c  ltide.h  mainloop.c  mainloop.h  makefile  output.c  output.h  particles.c  particles.h  peanuts_wrapper.c  peanuts_wrapper.h  read_config.c  read_config.h  shear.c  shear.h  (+10 more)
src/def/: README  bench_output.txt  config.mk  config_astro2.mk  config_default.mk  config_earth.mk  config_hpcf.mk  config_hyades.mk  config_mac.mk  config_neptune.mk  config_others.mk  config_vargas.mk  gvars.h  gvars_bench.h  gvars_default.h  timevar_bench
src/libconfig/: scanner.c
src/output/: output.c  output_common.c  output_common.h  output_dump.c  output_spectrum.c  output_timevar.c  output_timevar.h  output_vtk.c
src/problem/bench/: gvars.h  snoopy.cfg  timevar_bench
src/problem/convection/: gvars.h  snoopy.cfg
src/problem/convection_profile/: gvars.h  snoopy.cfg
src/problem/convection_walls/: gvars.h  snoopy.cfg
src/problem/couette/: gvars.h  snoopy.cfg
src/problem/default/: gvars.h  snoopy.cfg
src/problem/mri/: gvars.h  snoopy.cfg
src/problem/sbi/: gvars.h  snoopy.cfg  timevar
src/problem/shear_dynamo/: snoopy.cfg
src/problem/sheared_convection_wall/: gvars.h  snoopy.cfg
src/problem/turb/: gvars.h  gvars.h~  snoopy.cfg  snoopy.cfg~
src/problem/turbhr/: gvars.h  snoopy.cfg
